# word-scorer

./: .gitignore  LICENSE  README.md  ScoreWords.ipynb  extract_words.py  pyproject.toml  score_words.py  words.txt
